--- a/src/scss/frontend/drupal/drupal7/components/_search-results.scss
+++ b/src/scss/frontend/drupal/drupal7/components/_search-results.scss
@@ -15,6 +15,7 @@
 //
 // Style guide: frontend.drupal.drupal7.search-results
 .search-results {
+  margin-left: 0;
   padding-left: 0;
 
   .search-snippet-info {
