--- a/src/scss/framework/foundation/_settings.scss
+++ b/src/scss/framework/foundation/_settings.scss
@@ -1,3 +1,9 @@
+// Settings
+//
+// Define Foundation's settings for base and component styles.
+//
+// Style guide: foundation.settings
+
 //  Foundation for Sites Settings
 //  -----------------------------
 //
