--- a/src/scss/frontend/drupal/drupal7/modules/_styleguide.scss
+++ b/src/scss/frontend/drupal/drupal7/modules/_styleguide.scss
@@ -4,6 +4,8 @@
 //
 // Style guide: frontend.drupal.drupal7.modules.styleguide
 
+// scss-lint:disable IdSelector
+
 // Variables
 //
 // Style Guide component variables. To add/edit component variables, use <code>scss/_variables.scss</code>.
