--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -26,6 +26,9 @@
 // Style guide: foundation
 @import 'framework/foundation/framework';
 
+// Reference file for the Foundation framework (optional)
+//@import 'reference';
+
 // Motion UI (optional)
 //
 // A Sass library for creating flexible UI transitions and animations. See <a href="http://foundation.zurb.com/sites/docs/motion-ui.html" target="_blank">http://foundation.zurb.com/sites/docs/motion-ui.html</a> for more information.
