--- a/src/scss/frontend/drupal/drupal7/components/_admin-menu.scss
+++ b/src/scss/frontend/drupal/drupal7/components/_admin-menu.scss
@@ -6,6 +6,8 @@
 //
 // Style guide: frontend.drupal.drupal7.components.admin-menu
 
+// scss-lint:disable IdSelector, NestingDepth
+
 // Variables
 //
 // Admin Menu 1 component variables. To add/edit component variables, use <code>scss/_variables.scss</code>.
